compiler/testData/checkerWithErrorTypes/quick/regressions/kt328Complex.jet
fun bar() = {
    fun foo() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>bar()<!>
}
